--- a/css/site/contact.css
+++ b/css/site/contact.css
@@ -113,6 +113,10 @@
     margin-right: 10px;
 }
 
+.contactAppointment{
+    margin-bottom: 20px;
+}
+
 
 
 .reviewInformation {
@@ -204,6 +208,8 @@
     resize: vertical;
     overflow: auto;
     min-height: 200px;
+    color: #000;
+   padding: 10px;
 }
 
 .contactForm p{
@@ -215,11 +221,13 @@
 }
 
 .contactForm button{
-    float: left;
+    font-size: 17px;
     background-color: #9CD1BE;
     border-radius: 50px;
     border: none;
     padding: 10px 20px 10px 20px;
+    color: #ffffff;
+    float: right;
 }
 
 
