--- a/css/site/tips.css
+++ b/css/site/tips.css
@@ -1,134 +1,186 @@
 @charset "UTF-8";
-body {
-  background: #eee; }
 
-section {
-  padding-top: 75px !important;
-  padding-bottom: 75px !important; }
-
-#behandelingen-hero {
-  background: #9CD1BE;
-  padding-top: 200px !important;
-  padding-bottom: 200px !important; }
-  #behandelingen-hero h1 {
-    font-size: 50px;
-    color: white; }
-    #behandelingen-hero h1::before {
-      content: '“';
-      font-size: 250px;
-      position: absolute;
-      top: -100px;
-      left: -20px;
-      opacity: 0.2;
-      color: white; }
-    @media (max-width: 992px) {
-      #behandelingen-hero h1 {
-        font-size: 35px !important; } }
-  #behandelingen-hero p {
-    padding-top: 20px;
-    color: white !important; }
-    @media (max-width: 992px) {
-      #behandelingen-hero p {
-        font-size: 12px !important; } }
-
-#section-2 {
-  text-align: center;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important; }
-  #section-2 .after-header {
-    background: white;
-    top: -100px;
-    padding: 50px;
-    box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.2);
-    border-bottom: 2px #9CD1BE solid; }
-  @media (max-width: 992px) {
-    #section-2 p {
-      font-size: 12px !important; } }
-
-#behandelingen--section {
-  outline: 2px #9CD1BE solid;
-  outline-offset: -20px;
-  padding-top: 200px !important;
-  top: 0;
-  margin-top: -205px;
-  background: white; }
-  #behandelingen--section .g-txt {
-    position: absolute !important;
-    font-size: 100px !important;
-    color: #9CD1BE;
-    opacity: 0.2;
-    top: -30px; }
-    @media (max-width: 992px) {
-      #behandelingen--section .g-txt {
-        font-size: 40px !important;
-        left: 50px; } }
-  #behandelingen--section #behandelingen--items {
-    list-style: none;
-    padding-left: 0px;
-    text-align: center; }
-    #behandelingen--section #behandelingen--items li {
-      transition: all 0.2s ease;
-      padding-top: 20px; }
-      #behandelingen--section #behandelingen--items li:hover {
-        transform: scale(1.02); }
-      #behandelingen--section #behandelingen--items li a {
-        transition: all 0.2s ease;
-        color: black !important;
-        text-decoration: none;
-        font-size: 20px !important;
-        opacity: 0.4;
-        position: relative; }
-        @media (max-width: 992px) {
-          #behandelingen--section #behandelingen--items li a {
-            font-size: 13px !important; } }
-        #behandelingen--section #behandelingen--items li a:hover {
-          opacity: 1 !important; }
-          #behandelingen--section #behandelingen--items li a:hover::after {
-            width: 120px !important; }
-        #behandelingen--section #behandelingen--items li a::after {
-          content: '';
-          height: 2px;
-          width: 2px;
-          background: #9CD1BE;
-          position: absolute;
-          left: 0;
-          right: 0;
-          bottom: -10px;
-          margin: auto;
-          transition: all 0.5s ease; }
-
-.tips--case {
-  background: white;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  transition: all 1s ease;
-  border-bottom: 2px #9CD1BE solid;
-  margin-bottom: 5px;
-  position: relative;
-  margin-bottom: 20px;
+.tips-hero {
+    width: 100%;
+    background-image: url(../../images/over-mij-background.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    padding: 250px 20px;
 }
 
-  .tips--case a {
+.tips-hero small {
+    color: white;
+    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.tips-hero h1 {
+    color: white;
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
+    max-width: 900px;
+    padding-top: 60px;
+}
+
+.tips-hero h1::before {
+    content: '“';
+    font-size: 400px;
+    position: absolute;
+    top: -140px;
+    opacity: 0.2;
+    left: -50px;
+}
+
+@media only screen and (max-width: 992px) {
+  .tips-hero h1::before {
+    content: "" !important;
+  }
+}
+
+.tips-hero p {
+    margin: 40px 0 0 0;
+    max-width: 750px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 26px;
+    font-weight: 300;
+}
+
+.tips-info {
+    margin-top: -100px;
+    /* height: 500px; */
+}
+
+.tips-hero {
+    width: 100%;
+    background-image: url(../../images/over-mij-background.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    padding: 250px 20px;
+}
+
+.tips-hero small {
+    color: white;
+    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.tips-hero h1 {
+    color: white;
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
+    max-width: 900px;
+}
+
+.tips-hero h1::before {
+    content: '“';
+    font-size: 400px;
+    position: absolute;
+    top: 30px;
+    opacity: 0.2;
+    left: -50px;
+}
+
+@media only screen and (max-width: 992px) {
+  .tips-hero .intro h1::before {
+    content: "" !important;
+  }
+}
+
+.tips-hero p {
+    margin: 40px 0 0 0;
+    max-width: 750px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 26px;
+    font-weight: 300;
+}
+
+.tips-info {
+    margin-top: -100px;
+}
+
+.tipsBlock {
+    align-items: center;
+    z-index: 3;
+    background-color: #ffffff;
+    min-height: 200px;
+    border-bottom: 3px solid #9CD1BE;
+    box-shadow: 12px 0 20px -4px rgba(0, 0, 0, 0.1), -12px 0 20px -4px rgba(0, 0, 0, 0.1);
+}
+
+.tipsBlock .row {
+  text-align: center;
+}
+
+.tipsBlock span {
+  color: #9CD1BE;
+}
+
+@media only screen and (max-width: 992px) {
+    .tips_Block {
+        display: block;
+    }
+}
+
+.nav_titels {
+    padding: 50px 50px;
+}
+
+@media only screen and (max-width: 992px) {
+  .nav_titels {
+    padding: 50px 20px;
+  }
+}
+
+.nav_titels h2 {
+    color: #67ABA4;
+    padding-bottom: 30px;
+}
+
+section {
+    padding-top: 75px !important;
+    padding-bottom: 75px !important;
+}
+
+.tips-box {
+    background: white;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    transition: all 1s ease;
+    border-bottom: 2px #9CD1BE solid;
+    margin-bottom: 5px;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.tips-box a {
     color: #9CD1BE !important;
     font-size: 12px !important;
     padding-top: 15px !important;
   }
 
-  .tips--case hr {
+.tips-box hr {
     width: 50px;
     height: 2px;
     position: absolute;
     background: #9CD1BE;
     border-style: none;
     margin-left: -20px;
-  }
+}
 
-  .tips--case:hover {
+.tips-box:hover {
     transform: scale(1.02) !important;
     transition: all 0.3s ease;
-  }
+}
 
-  .tips--case p {
+.tips-box p {
     color: black !important;
     font-size: 17px !important;
     font-family: 'playfair';
@@ -136,28 +188,31 @@ section {
     z-index: 1;
     position: relative;
     text-align:center;
+    padding: 0 140px;
+}
+
+@media (max-width: 992px) {
+  .tips-box p {
+    padding: 0 15px;
   }
+}
 
-    @media (max-width: 992px) {
-      .tips--case p {
-        font-size: 12px !important;
-      }
-      }
+.tips-box .tips-vak {
+    padding: 0px 50px;
+}
 
-  .tips--case .tips-left {
-    padding: 0px 50px; }
-    @media (max-width: 992px) {
-      .tips--case .tips-left {
-        padding: 0px 15px !important;
-      }
-      }
+@media (max-width: 992px) {
+  .tips-box .tips-vak {
+    padding: 0px 15px !important;
+  }
+}
 
-  .tips--case .tips-titel p {
+.tips-box .tips-titel p {
     position: absolute;
     left: 0;
     right: 0;
     margin: auto;
-    font-size: 100px !important;
+    font-size: 80px !important;
     text-align: center !important;
     opacity: 0.3;
     top: -70px;
@@ -165,9 +220,9 @@ section {
     font-family: 'playfair';
     font-weight: bold;
     z-index: 0 !important;
-  }
+}
 
-  .tips--case h3 {
+.tips-box h3 {
     padding-bottom: 10px;
     color: #9CD1BE;
     font-weight: lighter;
@@ -177,7 +232,7 @@ section {
     z-index: 1 !important;
   }
 
-  .tips--case .image--big {
+.tips-box .image_big2 {
     background-position: center;
     background-size: cover;
     margin-bottom: 15px;
@@ -188,31 +243,55 @@ section {
     top: 0;
   }
 
-    @media screen and (max-width: 992px) {
-      .tips--case .image--big {
-        display: none;
-        }
-      }
+@media screen and (max-width: 992px) {
+  .tips-box .image_big2 {
+    display: none;
+  }
+}
 
-  .tips--case h4 {
-    z-index: 1;
-    position: relative;
-    font-size: 15px !important;
-    padding-bottom: 10px;
+.tips-titel {
+    left: 0;
+    right: 0;
+    margin: auto;
+    font-size: 100px !important;
+    text-align: center !important;
+    top: -20px;
+    color: #9CD1BE !important;
+    font-family: 'playfair';
+    font-weight: bold;
+    z-index: 0 !important;
+}
+
+@media screen and (max-width: 992px) {
+  .tips-box .tips-titel p {
+    left: 0;
+    right: 0;
+    margin: auto;
+    font-size: 50px;
+    text-align: center !important;
+    opacity: 0.3;
+    top: -20px;
     color: #9CD1BE;
-    padding-top: 50px; }
+    font-family: 'playfair';
+    font-weight: bold;
+    z-index: 0;
+  }
+}
 
-    .tips-begintitel {
-      left: 0;
-      right: 0;
-      margin: auto;
-      font-size: 100px !important;
-      text-align: center !important;
-      top: -20px;
-      color: #9CD1BE !important;
-      font-family: 'playfair';
-      font-weight: bold;
-      z-index: 0 !important;
-    }
+.none_bullet{
+  list-style-type:none;
+}
 
-/*# sourceMappingURL=behandelingen.css.map */
+.tips_link {
+  display: inline-block;
+  float: center;
+  padding: 0px 10px 0px 0px;
+}
+
+.padding_tekst1 {
+  margin-top: 110px;
+}
+
+.tussenruimte {
+  margin-top: 20px;
+}
