--- a/css/site/contact.css
+++ b/css/site/contact.css
@@ -209,7 +209,8 @@
     overflow: auto;
     min-height: 200px;
     color: #000;
-   padding: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 .contactForm p{
@@ -225,7 +226,7 @@
     background-color: #9CD1BE;
     border-radius: 50px;
     border: none;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 40px 10px 40px;
     color: #ffffff;
     float: right;
 }
