--- a/css/site/behandelingen.scss
+++ b/css/site/behandelingen.scss
@@ -2,11 +2,15 @@
 body{
 	background: #eee;
 }
-// $color: #9CD1BE;
+$color: #9CD1BE;
 
 section{
 	padding-top: 75px !important;
 	padding-bottom: 75px !important;
+}
+
+.parralax--bg{
+	background-size: 100%;
 }
 
 #behandelingen-hero{
@@ -95,26 +99,28 @@ section{
 				
 			}
 			a{
-				transition: all 0.2s ease;
+				transition: all 0.5s ease;
 				color: black !important;
 				text-decoration: none;
 				font-size: 20px !important;
-				opacity: 0.4;
+				opacity: 1;
 				position: relative;
 				@media (max-width: 992px) {
    			font-size: 13px !important;
   		}
 				&:hover{
 					opacity: 1 !important;
+					color: $color !important;
 					&::after{
-						width: 120px !important;
+						width: 100% !important;
+						background: $color !important;
 					}
 				}
 				&::after{
 				content:'';
-				height: 2px;
-				width: 2px;
-				background: $color;
+				height: 1px;
+				width: 120px;
+				background: black;
 				position: absolute;
 				left: 0;
 				right: 0;
