--- a/css/site/header.css
+++ b/css/site/header.css
@@ -57,6 +57,7 @@
 	background: white !important;
 }
 
+
 #desktop-menu{
 	float: right;
 	margin-bottom: 0px;
@@ -71,7 +72,7 @@
 
 #desktop-menu li a{
 	text-decoration: none;
-	color: white !important;
+	color: white;
 	font-size: 16px;
 	font-family: 'Montserrat', sans-serif;
 	position: relative;
@@ -85,7 +86,7 @@
 
 
 .navbar-scrolled #desktop-menu li a{
-	color: black !important;
+	color: black;
 }
 
 #desktop-menu li a::after{
@@ -164,6 +165,7 @@
 #desktop-menu li .menu-item-active{
 	color: #88dcb5 !important;
 }
+
 
 .menu-item-active::before{
 	content: '';
