--- a/css/site/home.css
+++ b/css/site/home.css
@@ -14,9 +14,9 @@ body {
 .home-hero {
   width: 100%;
   /* min-height: 90vh; */
-  background-image: url(../../images/home-background.png);
-  /* background-size: cover; */
-  background-position: center;
+  /*background-image: url(/images/home-background.png);*/
+   background-size: cover !important; 
+  /*background-position: center;*/
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
