--- a/css/admin.css
+++ b/css/admin.css
@@ -21,6 +21,10 @@
     width: calc(100vw - 350px);
 }
 
+.innerCMSBlok {
+    position: relative;
+}
+
 .innerCMSBlok label {
     display: none !important;
 }
@@ -31,4 +35,24 @@
 
 .innerCMSBlok h1 {
     margin-bottom: 0 !important;
+}
+
+.innerCMSBlok i {
+    position: absolute;
+    right: 5px;
+    font-size: 26px;
+    top: 65px;
+    cursor: pointer;
+}
+
+.innerCMSBlok label.weergevenLabel, .innerCMSBlok label.JaNeeLabel {
+    display: block !important;
+    width: 115px;
+    margin-top: 20px;
+    float: left;
+}
+
+.JaNeeLabel {
+    width: 30px !important;
+    margin-left: 10px;
 }
