--- a/css/admin.css
+++ b/css/admin.css
@@ -64,7 +64,30 @@
     margin-left: 10px;
 }
 
+.explanation-a{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.menuExplanation a{
+    text-align: center;
+    color: #67ABA4;
+}
+
+.menuExplanation h2{
+    color: #67ABA4;
+    margin-bottom: 20px;
+}
+
 
 .uitlegImg{
-    width: 100%;
+    height: 100%;
+}
+
+.mainHR{
+    border-color: #67ABA4;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 1px solid #67ABA4;
+
 }
