--- a/css/site/contact.css
+++ b/css/site/contact.css
@@ -2,7 +2,7 @@
     width: 100%;
     background-image: url(../../images/over-mij-background.jpg);
     background-size: cover;
-    background-position: center center;
+    background-position: center 0px;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
@@ -56,9 +56,12 @@
 .alkmaar, .castricum{
     background-color: #ffffff;
     padding: 70px;
-    margin-right: -20px;
+    min-height: 380px;
+    max-height: 380px;
+    /*margin-right: -20px;*/
     border-bottom: 3px solid #9CD1BE;
     box-shadow: 12px 0 20px -4px rgba(0, 0, 0, 0.1), -12px 0 20px -4px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
 }
 
 @media only screen and (max-width: 992px) {
