--- a/css/site/tips.css
+++ b/css/site/tips.css
@@ -4,11 +4,11 @@
     width: 100%;
     background-image: url(../../images/over-mij-background.jpg);
     background-size: cover;
-    background-position: center center;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
-    padding: 250px 20px;
+    padding-top: 175px !important;
+    padding-bottom: 175px !important;
 }
 
 .tips-hero small {
@@ -201,10 +201,13 @@ section {
     padding: 0px 50px;
 }
 
+
+
 @media (max-width: 992px) {
   .tips-box .tips-vak {
     padding: 0px 15px !important;
   }
+  
 }
 
 .tips-box .tips-titel p {
@@ -212,7 +215,7 @@ section {
     left: 0;
     right: 0;
     margin: auto;
-    font-size: 80px !important;
+    font-size: 40px !important;
     text-align: center !important;
     opacity: 0.3;
     top: -70px;
@@ -221,6 +224,8 @@ section {
     font-weight: bold;
     z-index: 0 !important;
 }
+
+
 
 .tips-box h3 {
     padding-bottom: 10px;
