--- a/css/site/home.css
+++ b/css/site/home.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -15,7 +16,7 @@ body {
   width: 100%;
   /* min-height: 90vh; */
   /*background-image: url(/images/home-background.png);*/
-   background-size: cover !important; 
+  background-size: cover !important;
   /*background-position: center;*/
   background-repeat: no-repeat;
   display: flex;
@@ -29,7 +30,7 @@ body {
   max-width: 600px;
 }
 
-.home-hero .intro h1::before{
+.home-hero .intro h1::before {
   content: '“';
   font-size: 400px;
   position: absolute;
@@ -41,10 +42,10 @@ body {
 @media only screen and (max-width: 992px) {
 
   .home-hero .intro h1::before {
-      content: "" !important;
+    content: "" !important;
   }
 
-} 
+}
 
 
 .home-hero .intro p {
@@ -75,7 +76,7 @@ body {
 }
 
 .home-blocks .case {
-  background: white; 
+  background: white;
   padding: 50px 20px;
   text-align: center;
   min-height: 300px;
@@ -115,6 +116,9 @@ body {
   border-bottom: 3px solid #9CD1BE;
   padding: 0;
   margin-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px !important;
+  position: relative;
 }
 
 .home-behandelingen .behandeling-text {
@@ -140,7 +144,6 @@ body {
 }
 
 .home-behandelingen .behandeling-text:before {
-  content: "1";
   font-family: 'Playfair Display', serif;
   position: absolute;
   color: #E9F9F1;
@@ -154,10 +157,10 @@ body {
 @media only screen and (max-width: 992px) {
 
   .home-behandelingen .behandeling-text:before {
-      content: "" !important;
+    content: "" !important;
   }
 
-} 
+}
 
 .home-behandelingen .behandeling-text p {
   margin-top: 30px;
@@ -173,6 +176,9 @@ body {
   background-position: center center;
   min-height: 350px;
   height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 /* Home Tip Section */
@@ -205,11 +211,11 @@ body {
 
 @media only screen and (max-width: 992px) {
 
-  .home-tip .tip:before  {
-      content: "" !important;
+  .home-tip .tip:before {
+    content: "" !important;
   }
 
-} 
+}
 
 .home-tip .inner-tip h4 {
   text-align: center;
