button text color white, added contact form on prijslijst pagina

--- a/css/site/prijslijst.css
+++ b/css/site/prijslijst.css
@@ -43,7 +43,7 @@
     background: #9CD1BE;
     border-radius: 50px;
     border-style: none;
-    color: black;
+    color: #ffffff;
     outline: none;
     transition: all 0.5s ease; }
     #prijslijst--section #prijslijst--btn:hover {
