--- a/css/site/prijslijst.scss
+++ b/css/site/prijslijst.scss
@@ -56,7 +56,7 @@ $color: #9CD1BE;
 		background: $color;
 		border-radius: 50px;
 		border-style: none;
-		color: black;
+		color: #ffffff;
 		outline: none;
 		transition: all 0.5s ease;
 		&:hover{
