--- a/css/site/footer.css
+++ b/css/site/footer.css
@@ -64,7 +64,7 @@ footer a{
 
 }
 
-footer a::after{
+/* footer a::after{
   content: '';
   width: 0%;
   height: 2px;
@@ -73,12 +73,9 @@ footer a::after{
   left: 0;
   bottom: -2px;
   transition: all 0.4s ease;
-}
+} */
 
 footer a:hover::after{
   width: 100% !important;
 }
 
-.footerimg:hover{
-  text-decoration: none;
-}
