--- a/css/admin.css
+++ b/css/admin.css
@@ -103,3 +103,16 @@
     border: 1px solid #67ABA4;
 
 }
+
+/* versiebeheer */
+.versieBeheer h1 {
+    font-size: 38px;
+    color: #79A7A4;
+    border-bottom: 1px solid rgb(161, 161, 161);
+    padding-bottom: 10px;
+    margin-bottom: 40px;
+}
+
+.versieBeheer h2 {
+    
+}
