over mij css, prijslijst h1 fix

--- a/css/site/over-mij.css
+++ b/css/site/over-mij.css
@@ -199,3 +199,8 @@ body {
 .avgPrivacy {
     text-align: center;
 }
+
+.avgPrivacy .avgPrivacyLink{
+    color: #9CD1BE;
+    text-decoration: underline;
+}
