--- a/css/site/prijslijst.css
+++ b/css/site/prijslijst.css
@@ -58,6 +58,11 @@
       list-style: none;
       padding-left: 0px;
       font-family: 'Montserrat', sans-serif; }
+      
+      .prijzenDisclaimer{
+        margin-top: 30px;
+        font-size: 1.5em;
+      }
 
 #zorgverzekering--section {
   background: white;
