--- a/css/site/prijslijst.css
+++ b/css/site/prijslijst.css
@@ -60,8 +60,8 @@
       font-family: 'Montserrat', sans-serif; }
       
       .prijzenDisclaimer{
-        margin-top: 30px;
-        font-size: 1.5em;
+        padding-top: 30px;
+        font-size: 1.3em;
       }
 
 #zorgverzekering--section {
