--- a/css/site/404.css
+++ b/css/site/404.css
@@ -1,7 +1,32 @@
 @charset "UTF-8";
 
 .section-404 {
-    padding: 200px 0;
-    margin-bottom: 100px;
+    padding: 300px 0 300px;
+    /* margin-bottom: 100px; */
     text-align: center;
+}
+
+.section-404 h1 {
+    margin-bottom: 30px;
+    font-size: 55px;
+}
+
+.section-404 h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.section-404 button {
+    margin-top: 80px;
+    color: white;
+    background: #67ABA4;
+    border: none;
+    padding: 16px 50px;
+    border-radius: 100px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    outline: none !important;
 }
