--- a/css/site/behandelingen.css
+++ b/css/site/behandelingen.css
@@ -132,7 +132,7 @@ section {
     transform: scale(1.02) !important;
     transition: all 0.3s ease; }
   .behandeling--case p {
-    color: black !important;
+    color: #686868 !important;
     font-size: 15px !important;
     z-index: 1;
     position: relative; }
