--- a/css/site/tips.css
+++ b/css/site/tips.css
@@ -45,7 +45,7 @@
     max-width: 750px;
     color: white;
     font-family: 'Montserrat', sans-serif;
-    font-size: 26px;
+    font-size: 16px;
     font-weight: 300;
 }
 
@@ -181,10 +181,10 @@ section {
 }
 
 .tips-box p {
-    color: black !important;
+    color: #686868 !important;
     font-size: 17px !important;
-    font-family: 'playfair';
-    font-weight: lighter;
+    /* font-family: 'playfair'; */
+    /* font-weight: lighter; */
     z-index: 1;
     position: relative;
     text-align:center;
